# sut-functional-pro

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SECURITY_HARDENING.md  VAULT_HARDENING.md  VULNERABILITY_RSA_REPORT.md  env.example  extract_pdf_text.py  openapi.yaml  package-lock.json  package.json  security-report-20251001-145758.txt
api/: Cargo.toml  Dockerfile
api/migrations/: 001_init.sql  002_create_users_table.sql  003_seed_users.sql
api/seeds/: README.md  apply_to_postgres.sh  schema.sql  seeds.sql  views.sql
api/src/: ARCHITECTURE_COMMENTS.md  COMPLETE_REFACTORING_SUMMARY.md  CONTACT_CONTROLLER_REFACTORING.md  DOCUMENTATION_SUMMARY.md  REFACTORING_SUMMARY.md  main.rs
api/src/application/: dto.rs  mod.rs
api/src/application/dtos/: audit_event_dto.rs  contact_dto.rs  department_dto.rs  merge_dto.rs  mod.rs  org_unit_dto.rs  user_dto.rs
api/src/application/use_cases/: contact.rs  department.rs  mod.rs  org_unit.rs  user.rs
api/src/domain/: entities.rs  errors.rs  mod.rs  repositories.rs  value_objects.rs
api/src/infra/: audit.rs  mod.rs  pg.rs  vault.rs
api/src/infrastructure/: mappers.rs  mod.rs
api/src/infrastructure/repositories/: contact_repository.rs  contact_repository_simple.rs  department_repository.rs  department_repository_simple.rs  mod.rs  org_unit_repository.rs  org_unit_repository_simple.rs  user_repository.rs  user_repository_simple.rs
api/src/presentation/: admin_stub.rs  auth.rs  contacts.rs  docs.rs  error_mapper.rs  handler_macros.rs  health.rs  ingestion.rs  mod.rs  org.rs  response_helpers.rs  search.rs  security_headers.rs  validation.rs  webhooks.rs
api/src/presentation/clean/: CONTROLLER_ARCHITECTURE.md  contact_controller.rs  contact_controller_macro_example.rs  contact_controller_refactored.rs  department_controller.rs  mod.rs  (+2 more)
api/src/shared/: base_traits.rs  config.rs  middleware_system.rs  mod.rs
(+360 files in other folders)
