[package]
name = "sut-api"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
jsonwebtoken = "9"
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
parking_lot = "0.12"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
axum-prometheus = "0.6"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
