[package]
name = "sut-api"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"], default-features = false }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
jsonwebtoken = "9.0"
once_cell = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
parking_lot = "0.12"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
axum-prometheus = "0.6"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
rand = "0.8"
mockito = { version = "1.0", optional = true }
